# niri-sidepanels

./: Cargo.toml  README.md  default_config.toml
src/: config.rs  lib.rs  main.rs  state.rs  struts.rs  test_utils.rs  window_rules.rs
src/commands/: close.rs  flip.rs  focus.rs  hide.rs  listen.rs  mod.rs  movefrom.rs  reorder.rs  send.rs  togglewindow.rs
