[package]
name = "niri-sidepanels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
fslock = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"
niri-ipc = "25.11.0"
regex = "1.12.3"
serde_regex = "1.1.0"

[dev-dependencies]
tempfile = "3.25.0"

[features]
test-utils = []
